syntax = "proto3";

package protobuf;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;

message HeaderList {
    repeated string Header = 1; 
} 

message Header {
    map<string, HeaderList> Header = 1;
}

message Response {
    string Body = 1 [(gogoproto.jsontag) = "body"];
    Header Header = 2 [(gogoproto.jsontag) = "header"];
    int64 StatusCode = 3 [(gogoproto.jsontag) = "status_code"];
    int64 TimeStamp = 4 [(gogoproto.jsontag) = "time_stamp"];
}
  